# radar-test

./: .replit  all_points.json  displays.js  enemy_gen.py  enemy_logic.js  enemy_types.js  index.html  left_display.js  pages.js  player.js  pyproject.toml  replit.nix  script.js  texture_gen.py  waypoint_gen.py
content/: quests.js
island_enemies/: -1,-10.json  -1,-3.json  -1,-4.json  -1,-5.json  -1,-6.json  -1,-7.json  -1,-8.json  -1,-9.json  -1,2.json  -1,3.json  -1,4.json  -1,6.json  -1,7.json  -1,8.json  -1,9.json  -10,-10.json  -10,-3.json  -10,-4.json  -10,-5.json  -10,-7.json  -10,-8.json  -10,-9.json  -10,2.json  -10,3.json  -10,4.json  -10,5.json  -10,6.json  -10,7.json  -10,9.json  -2,-10.json  -2,-3.json  -2,-4.json  -2,-5.json  -2,-8.json  -2,-9.json  -2,2.json  -2,4.json  -2,5.json  -2,6.json  -2,9.json  (+232 more)
points/: -1,-1.json  -1,-10.json  -1,-2.json  -1,-3.json  -1,-4.json  -1,-5.json  -1,-6.json  -1,-7.json  -1,-8.json  -1,-9.json  -1,0.json  -1,1.json  -1,2.json  -1,3.json  -1,4.json  -1,5.json  -1,6.json  -1,7.json  -1,8.json  -1,9.json  -10,-1.json  -10,-10.json  -10,-2.json  -10,-3.json  -10,-4.json  -10,-5.json  -10,-7.json  -10,-8.json  -10,-9.json  -10,1.json  -10,2.json  -10,3.json  -10,4.json  -10,5.json  -10,6.json  -10,7.json  -10,8.json  -10,9.json  -2,-1.json  -2,-10.json  (+331 more)
