[tool.poetry]
name = "repl-html-radar-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_radar_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pronounceable = "^0.1.3"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
